# serializer version: 1
# name: test_detector[Assembly-0.4.25-inline_assembly_contract.sol]
  list([
    list([
      dict({
        'check': 'assembly',
        'confidence': 'High',
        'description': '''
          GetCode.at(address) (tests/detectors/assembly/0.4.25/inline_assembly_contract.sol#6-20) uses assembly
          	- INLINE ASM (tests/detectors/assembly/0.4.25/inline_assembly_contract.sol#7-20)
  
        ''',
        'elements': list([
          dict({
            'name': 'at',
            'source_mapping': dict({
              'ending_column': 6,
              'filename_absolute': '/GENERIC_PATH',
              'filename_relative': 'tests/detectors/assembly/0.4.25/inline_assembly_contract.sol',
              'filename_short': 'tests/detectors/assembly/0.4.25/inline_assembly_contract.sol',
              'is_dependency': False,
              'length': 700,
              'lines': list([
                6,
                7,
                8,
                9,
                10,
                11,
                12,
                13,
                14,
                15,
                16,
                17,
                18,
                19,
                20,
              ]),
              'start': 119,
              'starting_column': 5,
            }),
            'type': 'function',
            'type_specific_fields': dict({
              'parent': dict({
                'name': 'GetCode',
                'source_mapping': dict({
                  'ending_column': 2,
                  'filename_absolute': '/GENERIC_PATH',
                  'filename_relative': 'tests/detectors/assembly/0.4.25/inline_assembly_contract.sol',
                  'filename_short': 'tests/detectors/assembly/0.4.25/inline_assembly_contract.sol',
                  'is_dependency': False,
                  'length': 724,
                  'lines': list([
                    5,
                    6,
                    7,
                    8,
                    9,
                    10,
                    11,
                    12,
                    13,
                    14,
                    15,
                    16,
                    17,
                    18,
                    19,
                    20,
                    21,
                  ]),
                  'start': 97,
                  'starting_column': 1,
                }),
                'type': 'contract',
              }),
              'signature': 'at(address)',
            }),
          }),
          dict({
            'name': '',
            'source_mapping': dict({
              'ending_column': 6,
              'filename_absolute': '/GENERIC_PATH',
              'filename_relative': 'tests/detectors/assembly/0.4.25/inline_assembly_contract.sol',
              'filename_short': 'tests/detectors/assembly/0.4.25/inline_assembly_contract.sol',
              'is_dependency': False,
              'length': 628,
              'lines': list([
                7,
                8,
                9,
                10,
                11,
                12,
                13,
                14,
                15,
                16,
                17,
                18,
                19,
                20,
              ]),
              'start': 191,
              'starting_column': 9,
            }),
            'type': 'node',
            'type_specific_fields': dict({
              'parent': dict({
                'name': 'at',
                'source_mapping': dict({
                  'ending_column': 6,
                  'filename_absolute': '/GENERIC_PATH',
                  'filename_relative': 'tests/detectors/assembly/0.4.25/inline_assembly_contract.sol',
                  'filename_short': 'tests/detectors/assembly/0.4.25/inline_assembly_contract.sol',
                  'is_dependency': False,
                  'length': 700,
                  'lines': list([
                    6,
                    7,
                    8,
                    9,
                    10,
                    11,
                    12,
                    13,
                    14,
                    15,
                    16,
                    17,
                    18,
                    19,
                    20,
                  ]),
                  'start': 119,
                  'starting_column': 5,
                }),
                'type': 'function',
                'type_specific_fields': dict({
                  'parent': dict({
                    'name': 'GetCode',
                    'source_mapping': dict({
                      'ending_column': 2,
                      'filename_absolute': '/GENERIC_PATH',
                      'filename_relative': 'tests/detectors/assembly/0.4.25/inline_assembly_contract.sol',
                      'filename_short': 'tests/detectors/assembly/0.4.25/inline_assembly_contract.sol',
                      'is_dependency': False,
                      'length': 724,
                      'lines': list([
                        5,
                        6,
                        7,
                        8,
                        9,
                        10,
                        11,
                        12,
                        13,
                        14,
                        15,
                        16,
                        17,
                        18,
                        19,
                        20,
                        21,
                      ]),
                      'start': 97,
                      'starting_column': 1,
                    }),
                    'type': 'contract',
                  }),
                  'signature': 'at(address)',
                }),
              }),
            }),
          }),
        ]),
        'first_markdown_element': 'tests/detectors/assembly/0.4.25/inline_assembly_contract.sol#L6-L20',
        'id': '37ca62e9af93d1648d3a1aa845426ec5395eab836277e3a8baa52621bf1df7c3',
        'impact': 'Informational',
        'markdown': '''
          [GetCode.at(address)](tests/detectors/assembly/0.4.25/inline_assembly_contract.sol#L6-L20) uses assembly
          	- [INLINE ASM](tests/detectors/assembly/0.4.25/inline_assembly_contract.sol#L7-L20)
  
        ''',
      }),
    ]),
  ])
# ---
# name: test_detector[Assembly-0.4.25-inline_assembly_library.sol]
  list([
    list([
      dict({
        'check': 'assembly',
        'confidence': 'High',
        'description': '''
          VectorSum.sumAsm(uint256[]) (tests/detectors/assembly/0.4.25/inline_assembly_library.sol#16-22) uses assembly
          	- INLINE ASM (tests/detectors/assembly/0.4.25/inline_assembly_library.sol#18-21)
  
        ''',
        'elements': list([
          dict({
            'name': 'sumAsm',
            'source_mapping': dict({
              'ending_column': 6,
              'filename_absolute': '/GENERIC_PATH',
              'filename_relative': 'tests/detectors/assembly/0.4.25/inline_assembly_library.sol',
              'filename_short': 'tests/detectors/assembly/0.4.25/inline_assembly_library.sol',
              'is_dependency': False,
              'length': 247,
              'lines': list([
                16,
                17,
                18,
                19,
                20,
                21,
                22,
              ]),
              'start': 593,
              'starting_column': 5,
            }),
            'type': 'function',
            'type_specific_fields': dict({
              'parent': dict({
                'name': 'VectorSum',
                'source_mapping': dict({
                  'ending_column': 2,
                  'filename_absolute': '/GENERIC_PATH',
                  'filename_relative': 'tests/detectors/assembly/0.4.25/inline_assembly_library.sol',
                  'filename_short': 'tests/detectors/assembly/0.4.25/inline_assembly_library.sol',
                  'is_dependency': False,
                  'length': 1581,
                  'lines': list([
                    5,
                    6,
                    7,
                    8,
                    9,
                    10,
                    11,
                    12,
                    13,
                    14,
                    15,
                    16,
                    17,
                    18,
                    19,
                    20,
                    21,
                    22,
                    23,
                    24,
                    25,
                    26,
                    27,
                    28,
                    29,
                    30,
                    31,
                    32,
                    33,
                    34,
                    35,
                    36,
                    37,
                    38,
                    39,
                    40,
                    41,
                    42,
                    43,
                    44,
                    45,
                    46,
                    47,
                    48,
                  ]),
                  'start': 98,
                  'starting_column': 1,
                }),
                'type': 'contract',
              }),
              'signature': 'sumAsm(uint256[])',
            }),
          }),
          dict({
            'name': '',
            'source_mapping': dict({
              'ending_column': 10,
              'filename_absolute': '/GENERIC_PATH',
              'filename_relative': 'tests/detectors/assembly/0.4.25/inline_assembly_library.sol',
              'filename_short': 'tests/detectors/assembly/0.4.25/inline_assembly_library.sol',
              'is_dependency': False,
              'length': 114,
              'lines': list([
                18,
                19,
                20,
                21,
              ]),
              'start': 720,
              'starting_column': 13,
            }),
            'type': 'node',
            'type_specific_fields': dict({
              'parent': dict({
                'name': 'sumAsm',
                'source_mapping': dict({
                  'ending_column': 6,
                  'filename_absolute': '/GENERIC_PATH',
                  'filename_relative': 'tests/detectors/assembly/0.4.25/inline_assembly_library.sol',
                  'filename_short': 'tests/detectors/assembly/0.4.25/inline_assembly_library.sol',
                  'is_dependency': False,
                  'length': 247,
                  'lines': list([
                    16,
                    17,
                    18,
                    19,
                    20,
                    21,
                    22,
                  ]),
                  'start': 593,
                  'starting_column': 5,
                }),
                'type': 'function',
                'type_specific_fields': dict({
                  'parent': dict({
                    'name': 'VectorSum',
                    'source_mapping': dict({
                      'ending_column': 2,
                      'filename_absolute': '/GENERIC_PATH',
                      'filename_relative': 'tests/detectors/assembly/0.4.25/inline_assembly_library.sol',
                      'filename_short': 'tests/detectors/assembly/0.4.25/inline_assembly_library.sol',
                      'is_dependency': False,
                      'length': 1581,
                      'lines': list([
                        5,
                        6,
                        7,
                        8,
                        9,
                        10,
                        11,
                        12,
                        13,
                        14,
                        15,
                        16,
                        17,
                        18,
                        19,
                        20,
                        21,
                        22,
                        23,
                        24,
                        25,
                        26,
                        27,
                        28,
                        29,
                        30,
                        31,
                        32,
                        33,
                        34,
                        35,
                        36,
                        37,
                        38,
                        39,
                        40,
                        41,
                        42,
                        43,
                        44,
                        45,
                        46,
                        47,
                        48,
                      ]),
                      'start': 98,
                      'starting_column': 1,
                    }),
                    'type': 'contract',
                  }),
                  'signature': 'sumAsm(uint256[])',
                }),
              }),
            }),
          }),
        ]),
        'first_markdown_element': 'tests/detectors/assembly/0.4.25/inline_assembly_library.sol#L16-L22',
        'id': '7009ef6498fa29901fbf3e9e1971a19f6fa48c87be3b2592c632e05a4321e1d3',
        'impact': 'Informational',
        'markdown': '''
          [VectorSum.sumAsm(uint256[])](tests/detectors/assembly/0.4.25/inline_assembly_library.sol#L16-L22) uses assembly
          	- [INLINE ASM](tests/detectors/assembly/0.4.25/inline_assembly_library.sol#L18-L21)
  
        ''',
      }),
      dict({
        'check': 'assembly',
        'confidence': 'High',
        'description': '''
          VectorSum.sumPureAsm(uint256[]) (tests/detectors/assembly/0.4.25/inline_assembly_library.sol#25-47) uses assembly
          	- INLINE ASM (tests/detectors/assembly/0.4.25/inline_assembly_library.sol#26-47)
  
        ''',
        'elements': list([
          dict({
            'name': 'sumPureAsm',
            'source_mapping': dict({
              'ending_column': 6,
              'filename_absolute': '/GENERIC_PATH',
              'filename_relative': 'tests/detectors/assembly/0.4.25/inline_assembly_library.sol',
              'filename_short': 'tests/detectors/assembly/0.4.25/inline_assembly_library.sol',
              'is_dependency': False,
              'length': 754,
              'lines': list([
                25,
                26,
                27,
                28,
                29,
                30,
                31,
                32,
                33,
                34,
                35,
                36,
                37,
                38,
                39,
                40,
                41,
                42,
                43,
                44,
                45,
                46,
                47,
              ]),
              'start': 923,
              'starting_column': 5,
            }),
            'type': 'function',
            'type_specific_fields': dict({
              'parent': dict({
                'name': 'VectorSum',
                'source_mapping': dict({
                  'ending_column': 2,
                  'filename_absolute': '/GENERIC_PATH',
                  'filename_relative': 'tests/detectors/assembly/0.4.25/inline_assembly_library.sol',
                  'filename_short': 'tests/detectors/assembly/0.4.25/inline_assembly_library.sol',
                  'is_dependency': False,
                  'length': 1581,
                  'lines': list([
                    5,
                    6,
                    7,
                    8,
                    9,
                    10,
                    11,
                    12,
                    13,
                    14,
                    15,
                    16,
                    17,
                    18,
                    19,
                    20,
                    21,
                    22,
                    23,
                    24,
                    25,
                    26,
                    27,
                    28,
                    29,
                    30,
                    31,
                    32,
                    33,
                    34,
                    35,
                    36,
                    37,
                    38,
                    39,
                    40,
                    41,
                    42,
                    43,
                    44,
                    45,
                    46,
                    47,
                    48,
                  ]),
                  'start': 98,
                  'starting_column': 1,
                }),
                'type': 'contract',
              }),
              'signature': 'sumPureAsm(uint256[])',
            }),
          }),
          dict({
            'name': '',
            'source_mapping': dict({
              'ending_column': 6,
              'filename_absolute': '/GENERIC_PATH',
              'filename_relative': 'tests/detectors/assembly/0.4.25/inline_assembly_library.sol',
              'filename_short': 'tests/detectors/assembly/0.4.25/inline_assembly_library.sol',
              'is_dependency': False,
              'length': 677,
              'lines': list([
                26,
                27,
                28,
                29,
                30,
                31,
                32,
                33,
                34,
                35,
                36,
                37,
                38,
                39,
                40,
                41,
                42,
                43,
                44,
                45,
                46,
                47,
              ]),
              'start': 1000,
              'starting_column': 9,
            }),
            'type': 'node',
            'type_specific_fields': dict({
              'parent': dict({
                'name': 'sumPureAsm',
                'source_mapping': dict({
                  'ending_column': 6,
                  'filename_absolute': '/GENERIC_PATH',
                  'filename_relative': 'tests/detectors/assembly/0.4.25/inline_assembly_library.sol',
                  'filename_short': 'tests/detectors/assembly/0.4.25/inline_assembly_library.sol',
                  'is_dependency': False,
                  'length': 754,
                  'lines': list([
                    25,
                    26,
                    27,
                    28,
                    29,
                    30,
                    31,
                    32,
                    33,
                    34,
                    35,
                    36,
                    37,
                    38,
                    39,
                    40,
                    41,
                    42,
                    43,
                    44,
                    45,
                    46,
                    47,
                  ]),
                  'start': 923,
                  'starting_column': 5,
                }),
                'type': 'function',
                'type_specific_fields': dict({
                  'parent': dict({
                    'name': 'VectorSum',
                    'source_mapping': dict({
                      'ending_column': 2,
                      'filename_absolute': '/GENERIC_PATH',
                      'filename_relative': 'tests/detectors/assembly/0.4.25/inline_assembly_library.sol',
                      'filename_short': 'tests/detectors/assembly/0.4.25/inline_assembly_library.sol',
                      'is_dependency': False,
                      'length': 1581,
                      'lines': list([
                        5,
                        6,
                        7,
                        8,
                        9,
                        10,
                        11,
                        12,
                        13,
                        14,
                        15,
                        16,
                        17,
                        18,
                        19,
                        20,
                        21,
                        22,
                        23,
                        24,
                        25,
                        26,
                        27,
                        28,
                        29,
                        30,
                        31,
                        32,
                        33,
                        34,
                        35,
                        36,
                        37,
                        38,
                        39,
                        40,
                        41,
                        42,
                        43,
                        44,
                        45,
                        46,
                        47,
                        48,
                      ]),
                      'start': 98,
                      'starting_column': 1,
                    }),
                    'type': 'contract',
                  }),
                  'signature': 'sumPureAsm(uint256[])',
                }),
              }),
            }),
          }),
        ]),
        'first_markdown_element': 'tests/detectors/assembly/0.4.25/inline_assembly_library.sol#L25-L47',
        'id': 'e6c5e2eab9e98c206f4092988fc006a6333e737680610667cba168fe739a3cf6',
        'impact': 'Informational',
        'markdown': '''
          [VectorSum.sumPureAsm(uint256[])](tests/detectors/assembly/0.4.25/inline_assembly_library.sol#L25-L47) uses assembly
          	- [INLINE ASM](tests/detectors/assembly/0.4.25/inline_assembly_library.sol#L26-L47)
  
        ''',
      }),
    ]),
  ])
# ---
